login/signup 페이지 완성 페이지 margin 확인

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="/rootstyle.css" />
+
+    <link rel="stylesheet" href="/style.css" />
     <link rel="icon" href="/img/favicon.ico" />
     <title>판다마켓</title>
   </head>
@@ -17,6 +19,7 @@
       </nav>
     </header>
     <main>
+      <!-- 메인화면에서 보이는 헤더역할 부분 -->
       <section id="main-header">
         <div class="title-wrap">
           <div class="title">
@@ -28,6 +31,7 @@
         </div>
         <img id="main-header-img" src="./img/image_top.png" />
       </section>
+      <!-- 메인에서 내용 부분 -->
       <seciton class="content" alt="main-content">
         <div class="content-wrap">
           <div class="background">
@@ -47,7 +51,6 @@
             </div>
           </div>
         </div>
-
         <div class="content-wrap">
           <div class="background">
             <div class="content-text-left">
@@ -86,6 +89,7 @@
           </div>
         </div>
       </seciton>
+      <!-- 메인 부분에서 footer 부분 -->
       <section id="main-header">
         <div class="title-wrap">
           <div class="title">
@@ -97,6 +101,7 @@
         <img id="main-header-img" src="./img/image_footer.png" />
       </section>
     </main>
+    <!-- 전체화면에서의 footer -->
     <footer class="footer">
       <div class="footer-content">
         <div class="copyright">@codeit - 2024</div>
