--- a/pages/login.html
+++ b/pages/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/reset.css" />
     <link rel="stylesheet" href="/rootstyle.css" />
-    <link rel="stylesheet" href="/pages/css/login.css" />
+    <link rel="stylesheet" href="/pages/css/sign.css" />
     <link rel="icon" href="/img/favicon.ico" />
     <title>판다마켓</title>
   </head>
