--- a/pages/login.html
+++ b/pages/login.html
@@ -2,6 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-9RT50W9P36"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-9RT50W9P36");
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/reset.css" />
     <link rel="stylesheet" href="/rootstyle.css" />
@@ -43,7 +57,7 @@
         <div id="quick-login-wrap">
           <a href="https://www.google.com"><img src="/img/google.png" /></a>
 
-          <a href="https://www.kakaocorp.com">
+          <a href="https://www.kakaocorp.com/page">
             <img src="/img/Kakaotalk.png" />
           </a>
         </div>
